--- a/_posts/2018-6-15-exp.markdown
+++ b/_posts/2018-6-15-exp.markdown
@@ -6,8 +6,8 @@ title: Caradigm
 description: |
 ---
 
-### Software Engineer
+#### Software Engineer
 
 * Developed enterprise software for health care. Built components that displayed various health data for patients
 * Collaborated and contributed with team to improve and add functionality to applications
-* Used and enhanced my skills in front-end web development, by using JavaScript, Knockout, JQuery, CSS/HTML5, and backend development using SQL
+* Used and enhanced my skills in front-end web development, by using `JavaScript`, `Knockout`, `JQuery`, `CSS`/`HTML5`, and backend development using `SQL`
