--- a/_posts/2018-6-19-exp.markdown
+++ b/_posts/2018-6-19-exp.markdown
@@ -10,4 +10,4 @@ description: |
 
 * Working in New York City on the Service Lab: Performance Testing for Backend Servers
 * Collaborated with multiple teams across Facebook, Presented design decisions
-* Responsibilities included developing in Python backend, and front end work in `PHP` and `React.js`
+* Responsibilities included developing in `Python` backend, and front end work in `PHP` and `React.js`
