fixed swe => swe_intern

--- a/_posts/2018-6-15-exp.markdown
+++ b/_posts/2018-6-15-exp.markdown
@@ -6,7 +6,7 @@ title: Caradigm
 description: |
 ---
 
-#### Software Engineer
+#### Software Engineer Intern
 
 * Developed enterprise software for health care. Built components that displayed various health data for patients
 * Collaborated and contributed with team to improve and add functionality to applications
