--- a/_posts/2018-6-19-exp.markdown
+++ b/_posts/2018-6-19-exp.markdown
@@ -6,7 +6,7 @@ title: Facebook
 description: |
 ---
 
-#### Software Engineer
+#### Software Engineer Intern
 
 * Working in New York City on the Service Lab: Performance Testing for Backend Servers
 * Collaborated with multiple teams across Facebook, Presented design decisions
