--- a/_posts/2018-6-21-exp.markdown
+++ b/_posts/2018-6-21-exp.markdown
@@ -6,6 +6,6 @@ title: Facebook
 description: |
 ---
 
-#### Software Engineer
+#### Software Engineer Intern
 
 * Working on the News Feed Content Classifcation Team
