--- a/_posts/2018-6-17-exp.markdown
+++ b/_posts/2018-6-17-exp.markdown
@@ -6,7 +6,7 @@ title: Google
 description: |
 ---
 
-#### Software Engineer
+#### Software Engineer Intern
 
 * Working on the payments infrastructure team, worked on developing generators for APIs
 * Implemented experiments in buy flows to test for conversion rates
