--- a/_posts/2018-6-14-proj.markdown
+++ b/_posts/2018-6-14-proj.markdown
@@ -1,1 +1,22 @@
-# CloudBike
+---
+layout: default
+img: dubhacks.png
+category: Project
+title: CloudBike
+keywords: IOT, WebServers, Analytics
+description: |
+---
+
+* Cloudbike is a full stack data analytics platform to show users insight on their bike routes, while generating bitcoin based on the intensity of their exercise.
+* Components included an arduino board hooked onto the bike giving data about it such as RPM, Microsoft Band giving Heart Rate, Android giving geolocation along with speed, collecting all the data, and sending everything to the web server. The web server process and store the data, for the web app to pull from. The web app visualizes all the data collected
+
+**Awards**: 4th Place Finalist at Dubhacks Fall 2015
+
+**Languages**: `node.js`, `C`, `Java`
+**Technologies**: `MongoDB`, `Node.js`, `AWS`, `Azure`, `Android`, `Arduino`
+
+[Github Entire](https://github.com/AkshatSh/CloudBike)
+
+[Github Backend](https://github.com/AkshatSh/CloudBikeBackend)
+
+[DevPost](https://devpost.com/software/cloudbike)
