--- a/_posts/2018-6-16-proj.markdown
+++ b/_posts/2018-6-16-proj.markdown
@@ -1,1 +1,20 @@
-# ReFresh
+---
+layout: default
+img: refresh.png
+category: Project
+title: ReFresh
+keywords: Computer Vision, Algorithms, WebBackend, Search, IOT
+description: |
+---
+
+* We wanted to build an incredibly simple IoT Solution for tracking perishables, so that you'd never waste food due to expiration dates again.
+* A user can scan a receipt of groceries, and ReFresh will tag and aggregate the purchased items and display them with an expiration timer
+* Users are able to take advantage of Postmates to re-order their food items as the expiration date approaches
+* ReFresh suggests recipes that use the expiring ingredients and sends text message reminders as items are nearing expiration (via Twilio)
+
+**Languages**: `javascript`, `HTML`, `CSS`
+**Technologies**: `node.js`, `HTML5`
+
+[Devpost](https://devpost.com/software/refresh-xjng7u)
+
+[GitHub](https://github.com/AkshatSh/re-Fresh)
