Added code highlighting to Facebook Work Experience

--- a/_posts/2018-6-21-exp.markdown
+++ b/_posts/2018-6-21-exp.markdown
@@ -10,4 +10,4 @@ description: |
 
 * Working on the News Feed Content Classifcation Team
 * Worked on Text Modeling, Model Calibration, and Feature Discovery Tools
-* Work invovled Python, C++, Hack (PHP), and Caffe2
+* Work invovled `Python`, `C++`, `Hack (PHP)`, and `Caffe2`
