added BNMT project link

--- a/_posts/2018-12-15-proj.markdown
+++ b/_posts/2018-12-15-proj.markdown
@@ -12,4 +12,4 @@ description: |
 **Languages**: `Python`
 **Technologies**: `PyTorch`, `numpy`, `xnornet`, `fairseq`
 
-[Soon a link to github!](https://github.com/AkshatSh/VideoSearchEngine)
+[See More on Github!](https://github.com/AkshatSh/BinarizedNMT)
