updated for more detail in edu

--- a/_posts/2018-6-13-edu.markdown
+++ b/_posts/2018-6-13-edu.markdown
@@ -9,7 +9,7 @@ description: |
 
 **GPA**: 3.89/4.00
 
-**Honors:** Magna Cum Laude
+**Honors:** Magna Cum Laude (Top 3%)
 
 **Dean's List:** 2014-2018
 
