--- a/_posts/_posts/2024-08-22-exp.markdown
+++ b/_posts/_posts/2024-08-22-exp.markdown
@@ -8,6 +8,7 @@ description: |
 
 #### Co-founder & CTO
 
+[Perceptron AI](https://perceptron.inc/)
 * Our mission is to deliver the layer of intelligence that bridges the physical and digital worlds.
-* Perceptron is developing the first family of foundation models for the physical world. Our foundation models treat all input streams—video, audio, text, and structured data—as first-class citizens, maintaining consistent real-time performance across diverse hardware configurations.
-* We're a fully in-person team located in Seattle. If you're interested in joining us, get in touch: hiring@perceptron.inc
+* Our foundation models treat all input streams—video, audio, text, and structured data—as first-class citizens, maintaining consistent real-time performance across diverse hardware configurations.
+* We're a fully in-person team located in Seattle. If you're interested in joining us, get in touch: [hiring@perceptron.inc](mailto:hiring@perceptron.inc)
